<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="Логотип приложения"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        android:padding="@dimen/padding_input"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/edittext_background"
        android:textSize="@dimen/text_size_input"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:padding="@dimen/padding_input"
        android:layout_marginTop="@dimen/margin_medium"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:textSize="@dimen/text_size_input"
        app:layout_constraintTop_toBottomOf="@id/editTextLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:textSize="@dimen/text_size_input"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorButtonText"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:padding="@dimen/padding_input" />

    <Button
        android:id="@+id/buttonOpenList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Открыть список пользователей"
        android:textSize="@dimen/text_size_input"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorButtonText"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/textViewResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:padding="@dimen/padding_input" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_result"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/result_text" />

    <Button
        android:id="@+id/buttonOpenMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Открыть карту"
        app:layout_constraintTop_toBottomOf="@id/buttonOpenList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:padding="@dimen/padding_input" />


</androidx.constraintlayout.widget.ConstraintLayout>